[Calibration] changed the picture explaining the TOT and the TOA

--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -193,57 +193,67 @@ hits.
 
 \begin{figure}[htbp]
   \centering
-  \begin{tikzpicture}
-    \begin{scope}[x={(image.south east)},y={(image.north west)}]
-      % pulse
-      \draw[-, thick] (0.1, 0.8) -- (0.2, 0.8);
-      \draw[-, thick] (0.2, 0.8) -- (0.21, 0.98);
-      \draw[-, thick] (0.21, 0.98) -- (0.22, 0.8);
-      \draw[-, thick] (0.22, 0.8) -- (1, 0.8);
-
-      % shaper
-      \draw[-, thick] (0.1, 0.5) -- (0.2, 0.5);
-      \draw[-, thick] (0.2, 0.5) -- (0.22, 0.7);
-      \draw[-, thick] (0.22, 0.7) -- (0.8, 0.5);
-      \draw[-, thick, dashed, green] (0.1, 0.55) -- (0.8, 0.55);
-      \draw[-, thick] (0.8, 0.5) -- (1, 0.5);
-
-      % comparator
-      \draw[-, thick] (0.1, 0.3) -- (0.21, 0.3);
-      \draw[-, thick] (0.21, 0.3) -- (0.21, 0.4);
-      \draw[-, thick] (0.21, 0.4) -- (0.65, 0.4);
-      \draw[-, thick] (0.65, 0.4) -- (0.65, 0.3);
-      \draw[-, thick] (0.65, 0.3) -- (1, 0.3);
-
-      \timing [] at (0.11, 0.2) {HLLHHLLHHLLHHLLHHLLHHLLHH};
-      \draw[arrows=<->, thick](0.21, 0.15)--(0.65, 0.15) node [pos=0.5, below]
-      {\textbf{TOT (3 counts)}};
-
-      \timing [] at (0.1,0.0) {llllllhlhlhlhllllllllllllllllllllllllllllllllllllll};
-
-      \draw[-, thick, dashed, blue] (0.21, 0.55) -- (0.21, 0.0);
-      \draw[-, thick, dashed, blue] (0.65, 0.55) -- (0.65, 0.0);
-
-      \draw[-, thick, dashed, red] (0.355, 0.2) -- (0.355, 0.0);
-
-      \draw[arrows=<->, thick](0.21, -0.05)--(0.35, -0.05) node [pos=0.5, below]
-      {\textbf{FTOA (4 counts)}};
-
-
-      \node[left] at (0.1, 0.8) {Sensor pulse};
-      \node[left, green] at (0.1, 0.6) {Threshold};
-      \node[left] at (0.1, 0.5) {Pulse after shaping};
-      \node[left] at (0.1, 0.3) {Discriminator output};
-      \node[left] at (0.1, 0.2) {General clock}; %$40\,\megahertz$ Clk}
-      \node[left] at (0.1, 0.0) {FTOA clock}; %$640\,\megahertz$ Clk (FTOA)     
-
-
-    \end{scope}
-  \end{tikzpicture}
+  \includegraphics[width=0.7\textwidth, page=8, trim = 50mm 190mm 60mm
+  30mm, clip]{Articles/Timepix3_JINST.pdf}
   \caption{Schematic overview of the Time-over-Threshold (TOT) and
-    Time-of-Arrival (TOA) measurements for the Timepix3 readout chips.}
+    Time-of-Arrival (TOA) measurements for the Timepix3 readout
+    chips. From~\cite{Timepix3Poikela}.}
   \label{fig:TOT_TOA_concept}
 \end{figure}
+
+% \begin{figure}[htbp]
+%   \centering
+%   \begin{tikzpicture}
+%     \begin{scope}[x={(image.south east)},y={(image.north west)}]
+%       % pulse
+%       \draw[-, thick] (0.1, 0.8) -- (0.2, 0.8);
+%       \draw[-, thick] (0.2, 0.8) -- (0.21, 0.98);
+%       \draw[-, thick] (0.21, 0.98) -- (0.22, 0.8);
+%       \draw[-, thick] (0.22, 0.8) -- (1, 0.8);
+
+%       % shaper
+%       \draw[-, thick] (0.1, 0.5) -- (0.2, 0.5);
+%       \draw[-, thick] (0.2, 0.5) -- (0.22, 0.7);
+%       \draw[-, thick] (0.22, 0.7) -- (0.8, 0.5);
+%       \draw[-, thick, dashed, green] (0.1, 0.55) -- (0.8, 0.55);
+%       \draw[-, thick] (0.8, 0.5) -- (1, 0.5);
+
+%       % comparator
+%       \draw[-, thick] (0.1, 0.3) -- (0.21, 0.3);
+%       \draw[-, thick] (0.21, 0.3) -- (0.21, 0.4);
+%       \draw[-, thick] (0.21, 0.4) -- (0.65, 0.4);
+%       \draw[-, thick] (0.65, 0.4) -- (0.65, 0.3);
+%       \draw[-, thick] (0.65, 0.3) -- (1, 0.3);
+
+%       \timing [] at (0.11, 0.2) {HLLHHLLHHLLHHLLHHLLHHLLHH};
+%       \draw[arrows=<->, thick](0.21, 0.15)--(0.65, 0.15) node [pos=0.5, below]
+%       {\textbf{TOT (3 counts)}};
+
+%       \timing [] at (0.1,0.0) {llllllhlhlhlhllllllllllllllllllllllllllllllllllllll};
+
+%       \draw[-, thick, dashed, blue] (0.21, 0.55) -- (0.21, 0.0);
+%       \draw[-, thick, dashed, blue] (0.65, 0.55) -- (0.65, 0.0);
+
+%       \draw[-, thick, dashed, red] (0.355, 0.2) -- (0.355, 0.0);
+
+%       \draw[arrows=<->, thick](0.21, -0.05)--(0.35, -0.05) node [pos=0.5, below]
+%       {\textbf{FTOA (4 counts)}};
+
+
+%       \node[left] at (0.1, 0.8) {Sensor pulse};
+%       \node[left, green] at (0.1, 0.6) {Threshold};
+%       \node[left] at (0.1, 0.5) {Pulse after shaping};
+%       \node[left] at (0.1, 0.3) {Discriminator output};
+%       \node[left] at (0.1, 0.2) {General clock}; %$40\,\megahertz$ Clk}
+%       \node[left] at (0.1, 0.0) {FTOA clock}; %$640\,\megahertz$ Clk (FTOA)     
+
+
+%     \end{scope}
+%   \end{tikzpicture}
+%   \caption{Schematic overview of the Time-over-Threshold (TOT) and
+%     Time-of-Arrival (TOA) measurements for the Timepix3 readout chips.}
+%   \label{fig:TOT_TOA_concept}
+% \end{figure}
 
 
 \subsection{SPIDR readout system for Timepix3}\label{sec:TimepixReadout}
@@ -264,7 +274,8 @@ Ethernet link.
     \includegraphics[width=\textwidth]{./figures/Calibration/SPIDRboard}
     \caption{}
   \end{subfigure}
-  \caption{(a) Timepix3 chip board and (b) SPIDR readout board.}
+  \caption{(a) Timepix3 chip board and (b) SPIDR readout board
+    from~\cite{Timepix3Poikela}.}
   \label{fig:Timepix3board_SPIDR}
 \end{figure}
 
