[ThinSensors] small update

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -65,13 +65,13 @@ the bias voltages are scanned.
     \toprule
     Timepix3 ID & Thickness [$\micron$] & Bias voltage [V] & Threshold [DAC] & Threshold [e\textsuperscript{-}]\\
     \midrule
-    W19\_G7 & 50 & -15 & 1190 & $526.230\pm0.649$ \\
-    W19\_F7 & 50 & -15 & 1187 & $600.406\pm0.551$ \\
-    W19\_L8 & 50 & -15 & 1133 & $568.506\pm0.538$ \\
-    W19\_C7 & 50 & -15 & 1148 & $608.700\pm0.488$ \\ \hline
-    W5\_E2 & 100 & -20 & 1160 & $561.019\pm0.712$ \\ \hline
-    W5\_F1 & 150 & -30 & 1153 & $554.885\pm0.493$ \\ \hline
-    W2\_J5 & 300 & 100 & 1170 & $565.723\pm1.560$ \\
+    W19\_G7 & 50 & -15 & 1190 & $526.2\pm0.7$ \\
+    W19\_F7 & 50 & -15 & 1187 & $600.4\pm0.6$ \\
+    W19\_L8 & 50 & -15 & 1133 & $568.5\pm0.5$ \\
+    W19\_C7 & 50 & -15 & 1148 & $608.7\pm0.5$ \\ \hline
+    W5\_E2 & 100 & -20 & 1160 & $561.0\pm0.7$ \\ \hline
+    W5\_F1 & 150 & -30 & 1153 & $554.9\pm0.5$ \\ \hline
+    W2\_J5 & 300 & 100 & 1170 & $565.7\pm1.6$ \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -186,6 +186,9 @@ calibration is validated.
 
 %% --------------------------------------------- %%
 \section{Experimental and simulated results for thin sensors}
+
+This section gives an overview on the performance of thin sensors and
+compares data with AllPix simulations.
 
 %% --------------------------------------------- %%
 \subsection{Measurement of the depletion voltage}
