[Silicon] update on the Silicon diffusion equation

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -748,10 +748,12 @@ The diffusion standard deviation is given by:
 
 \begin{equation} 
   \sigma_{diffusion}\left(z\right)=\sqrt{2 D_{b} t_{c}}=\sqrt{{{kTd^2}\over{eV_D}}ln\left({{V_B+V_D}\over{V_B+V_D-2V_Dz/d}}\right)}
-  \; .
+  \; ,
   \label{eq:sigmaDiffusion}
 \end{equation}
 
+where $D_b$ is the diffusion constant and related to the mobility via
+the Einstain equation $D_b=\mu_{c} \cdot k_{b} \cdot T/e$.
 
 The drift time depends on the charge carrier as shown in
 \cref{eq:driftTimeIntegrated}. \cref{fig:Drift_n_vs_p} compares the
