--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -5,10 +5,11 @@
 
 
 The Compact Linear Collider (CLIC) concept~\cite{Aicheler:1500095} for
-a future linear e\textsuperscript{+}e\textsuperscript{-} collider has
-the potential to complement the measurements done by the LHC
+a future linear e\textsuperscript{+}e\textsuperscript{-} collider is
+under development by the international CLIC collaboration and has the
+potential to complement the measurements done by the LHC
 experiments. With proposed centre-of-mass energies of $380\,\gev$,
-$1.5\,\tev$ and $3\,\tev$ and with instantaneous luminosity up to
+$1.5\,\tev$ and $3\,\tev$ and with an instantaneous luminosity up to
 $6\times10^{34}\,\inversecmsquaredsec$, it allows for high precision
 measurements of Standard Model physics and of new physics potentially
 discovered at the $13\,\tev$ LHC as well as searches for Beyond
@@ -21,9 +22,12 @@ demands for the vertex detector in terms of spatial resolution,
 material budget, timing resolution and efficient heat removal from
 sensors and readout. The CLIC vertex detector R\&D programme studies
 different sensor technologies and takes into account constraints from
-mechanics, power delivery and cooling.  The goal is to achieve a
-single-point resolution of $3\,\micron$ with $50\,\micron$ thick
-sensors coupled to $50\,\micron$ thick readout ASICs with
+mechanics, power delivery and cooling. In order to reduce the multiple
+scatterings and achieve high precision on measurements, a low material
+budget of $\sim0.2\%$~X\textsubscript{0} per vertex detector layer is
+required including readout, support and cabling. The goal is to
+achieve a single-point resolution of $3\,\micron$ with $50\,\micron$
+thick sensors coupled to $50\,\micron$ thick readout ASICs with
 $25\,\micron$ pixel pitch.
 
 In this thesis, the feasibility of thin sensors for operation for the
@@ -34,27 +38,27 @@ compared to \textsc{Geant4}-based~\cite{Agostinelli:2002hh}
 simulations to validate the simulations. The simulation is
 extrapolated for smaller pixels of $25\,\micron$.
 
-In order to reduce the multiple scatterings and achieve high precision
-on measurements, a low material budget of
-$\sim0.2\%$~X\textsubscript{0} per vertex detector layer is required
-including readout, support and cabling. Active-edge sensors allow for
-seamless tiling of pixel sensors of a vertex detector by depleting the
-sensors up to their physical edges. This allows for high coverage
-without creating overlaps between the pixel sensors and therefore
-reduces the material. Different guard ring solutions for thin
-active-edge sensors are considered for the CLIC vertex
-detector. Prototypes have been characterised with measurements and
-simulations and an optimal solution is proposed.
+Active-edge sensors allow for seamless tiling of pixel sensors of a
+vertex detector by depleting the sensors up to their physical
+edges. This allows for high coverage without creating overlaps between
+the pixel sensors and therefore reduces the material. Measurements of
+prototypes and corresponding simulations are performed to compare the
+performance of different active-edge sensor layouts, resulting in a
+proposal for a suitable layout.
 
-This thesis is structured as following. \cref{ch:CLIC} describes the
+% Different guard
+% ring solutions for thin active-edge sensors are considered for the
+% CLIC vertex detector. Prototypes have been characterised with
+% measurements and simulations and an optimal solution is proposed.
+
+This thesis is structured as follows. \cref{ch:CLIC} describes the
 CLIC experiment. The accelerator is briefly introduced and the
 requirements on the CLIC detector, with a focus on the vertex
 detector, are given. The flavour-tagging performance is studied for
 different geometries of the vertex detector.
 
-As this thesis focuses on the R\&D of the vertex detector, principles
-of the semiconductor detectors are presented in
-\cref{sec:SiliconTheory}.
+As this thesis focuses on the R\&D of silicon detectors, principles of
+the semiconductor detectors are presented in \cref{sec:SiliconTheory}.
 
 The Timepix3 readout ASIC is presented in
 \cref{ch:FE_electronics}. The tested assemblies are introduced and
@@ -79,6 +83,9 @@ simulations.
 The performance of active-edge sensors is discussed in
 \cref{ch:ActiveEdgeSensors}. Different designs for the guard ring are
 considered. Test-beam results are compared to TCAD simulations.
+
+\cref{ch:conclusions} summarises the obtained results and gives
+conclusions.
 
 % Different guard ring solutions for thin active-edge sensors and their
 % test beam results are introduced in
